force-app/main/default/objects/ApprovalProcessMail__mdt/ApprovalProcessMail__mdt.object-meta.xml
<CustomObject>
    <description>Aqui se encuentran los correos a los que se enviarán los correos de notificación que correspondan a los procesos de aprobación, este metadata simulará listas de distribución</description>
    <label>ApprovalProcessMail</label>
    <pluralLabel>ApprovalProcessMails</pluralLabel>
</CustomObject>