force-app/main/default/objects/ApprovalProcessMail__mdt/fields/Activo__c.field-meta.xml
<CustomField>
    <fullName>Activo__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Campo de control que permite el uso o no del registro</description>
    <inlineHelpText>Campo de control que permite el uso o no del registro</inlineHelpText>
    <label>Activo</label>
    <type>Checkbox</type>
</CustomField>