force-app/main/default/objects/ApprovalProcessMail__mdt/fields/Correo_Elara__c.field-meta.xml
<CustomField>
    <fullName>Correo_Elara__c</fullName>
    <description>Correo con dominio de ELARA</description>
    <inlineHelpText>Correo con dominio de ELARA</inlineHelpText>
    <label>Correo Elara</label>
    <required>true</required>
    <type>Email</type>
</CustomField>