force-app/main/default/objects/ApprovalProcessMail__mdt/fields/Nombre_Completo__c.field-meta.xml
<CustomField>
    <fullName>Nombre_Completo__c</fullName>
    <description>Nombre completo de la persona a la que corresponde el correo</description>
    <inlineHelpText>Nombre completo de la persona a la que corresponde el correo</inlineHelpText>
    <label>Nombre Completo</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>