force-app/main/default/objects/ApprovalProcessMail__mdt/fields/Rol__c.field-meta.xml
<CustomField>
    <fullName>Rol__c</fullName>
    <label>Rol</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Comité Directivo</fullName>
                <default>true</default>
                <label>Comité Directivo</label>
            </value>
            <value>
                <fullName>Documentador</fullName>
            </value>
            <value>
                <fullName>Control Comercial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>