force-app/main/default/objects/ApprovalProcessMail__mdt/listViews/Listas_de_distribucion.listView-meta.xml
<ListView>
    <fullName>Listas_de_distribucion</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Correo_Elara__c</columns>
    <columns>Nombre_Completo__c</columns>
    <columns>Rol__c</columns>
    <columns>Activo__c</columns>
    <columns>NamespacePrefix</columns>
    <filterScope>Everything</filterScope>
    <label>Listas de distribución</label>
</ListView>